apps/lldap/overlays/nishir-tailnet/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: lldap
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
  parametersRef:
    name: lldap
    group: gateway.envoyproxy.io
    kind: EnvoyProxy
    namespace: shikanime
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: lldap
spec:
  gatewayClassName: lldap
  listeners:
    - name: http
      port: 80
      protocol: HTTP
    - name: https
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: studio-shikanime-i-lldap
            group: ""
            kind: Secret
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: lldap-redirect
spec:
  hostnames:
    - lldap.i.shikanime.studio
  parentRefs:
    - name: lldap
      sectionName: http
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
