apps/lldap/overlays/nishir-tailnet/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: lldap-redirect
spec:
  hostnames:
    - lldap.i.shikanime.studio
  parentRefs:
    - name: lldap
      sectionName: http
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
