apps/lldap/overlays/nishir-tailnet/patch-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: lldap
spec:
  hostnames:
    - lldap.i.shikanime.studio
    - lldap.taila659a.ts.net
